# advent-of-code_2018

./: .gitignore  README.md  aoc_2018.sh
00/: day00  main_basic.cpp
00/basic_cmake_cpp/: CMakeLists.txt
00/basic_cmake_cpp/tests/: CMakeLists.txt  test_lib.cpp  test_main.cpp
01/: Makefile  day01.cpp
02/day02.rs/: Cargo.toml
02/day02.rs/src/: main.rs
03/day03.rs/: Cargo.toml
03/day03.rs/src/: main.rs
04/day04-rs/: Cargo.toml
04/day04-rs/src/: main.rs
05/day05-rs/: Cargo.toml
05/day05-rs/src/: main.rs
06/day06-rs/: Cargo.toml
06/day06-rs/src/: main.rs
07/day07-rs/: Cargo.toml
07/day07-rs/src/: main.rs
08/: .gitignore
08/day08-rs/: Cargo.toml
08/day08-rs/src/: main.rs
09/: input_b.txt
09/day09-cpp/: Makefile
09/day09-cpp/src/: game.cpp  game.h  main.cpp
09/day09-rs/: Cargo.toml
09/day09-rs/src/: main.rs
10/: Makefile
10/day10-cpp/src/: main.cpp  sky.cpp  sky.hpp
11/: Makefile  README.md
11/day11-cpp/src/: fuel.cpp  fuel.hpp  main.cpp
12/: Makefile
12/day12-cpp/src/: life.cpp  life.hpp  main.cpp
13/: Makefile  test_input_1.txt
13/day13-cpp/src/: main.cpp  tracks.cpp  tracks.hpp
14/: Makefile
14/day14-cpp/src/: game.cpp  game.hpp  main.cpp
15/: .gitignore
15/day15-cpp/: CMakeLists.txt
15/day15-cpp/include/day15/: board.hpp  entity.hpp  lib.hpp
15/day15-cpp/input/: answer_1.txt  answer_2.txt  answer_5.txt
15/day15-cpp/src/: board.cpp  entity.cpp  lib.cpp  main.cpp
15/day15-cpp/tests/: CMakeLists.txt  test_board.cpp  test_entity.cpp  test_lib.cpp
15/input/: answer_0.txt  answer_3.txt  answer_4.txt
16/: .gitignore  Makefile
16/day16-cpp/src/: main.cpp  reg_machine.cpp  reg_machine.hpp
day01-rust/: Cargo.toml
day01-rust/src/: main.rs
